test/fails/bad_functions/auto.lgl
auto f(int x) {
    return x;
}

void main() {
    print f(5);
}